# nano-stream

./: .clang-format  .clangd  .gitignore  .gitmodules  AERON_BUILD_GUIDE.md  BENCHMARK_RESULTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  benchmark_cpp.json  comparison_report.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  benchmark_comparison.cpp  benchmark_main.cpp  benchmark_ring_buffer.cpp  benchmark_sequence.cpp  benchmark_typical.cpp
benchmarks/jmh/: BlockingQueueBenchmark.cpp  EmptyOverhead.cpp  MultiProducerSingleConsumer.cpp  SingleProducerSingleConsumer.cpp  TBusSingleProducerSingleConsumer.cpp  jmh_config.h  jmh_util.h
benchmarks/perftest/sequenced/: OneToOneSequencedThroughputTest.cpp
benchmarks/perftest/support/: PerfTestContext.h  PerfTestUtil.h  ValueAdditionEventHandler.h  ValueEvent.h
cmake/: disruptor-cpp-config.cmake.in  nano-stream-config.cmake.in
docs/: AERON_ARCHITECTURE_DATAFLOW.md  AERON_FINANCIAL_ADVANTAGES.md  ARCHITECTURE.md  BENCHMARK_RESULTS.md  BUILD_GUIDE.md  BYZANTINE_FAULT_TOLERANCE_MATH.md  CPP_EXPERT_2025.md  DISRUPTOR_DESIGN_ANALYSIS.md  EPOLL_TRIGGER_MODES.md  IMPROVEMENTS_SUMMARY.md  INTERVIEW_PREP.md  INTERVIEW_PREP_PLAN.md  LIFECYCLE_OWNERSHIP.md  MALICIOUS_PROPOSER_HANDLING.md  MEMORY_BARRIERS_AND_ATOMICS.md  MEMORY_BARRIERS_AND_ATOMICS_CN.md  OPTIMIZATION_NOTES.md  PROJECT_STATUS.md  README.md  REFERENCES.md  SEQUENCE_AND_SEQUENCEBARRIER_ANALYSIS.md  SEQUENCE_DESIGN.md  TBUS_VS_AERON_ARCHITECTURE_COMPARISON.md  TENDERMINT_CONSENSUS_CORE_CONCEPTS.md  TENDERMINT_CONSENSUS_LEARNING_GUIDE.md  TENDERMINT_CONSENSUS_VISUALIZATION.md  TENDERMINT_LEARNING_GUIDE.md  TENDERMINT_LEARNING_PROGRESS.md  TENDERMINT_MATHEMATICAL_FORMULAS.md  TENDERMINT_PRACTICAL_EXERCISES.md  TENDERMINT_TUTORIAL.md  Unity-CPP集成架构文档.md  some.md
examples/: CMakeLists.txt  advanced_example.cpp  aeron_full_example.cpp  aeron_ipc_example.cpp  aeron_simple_basic.cpp  basic_example.cpp  complete_aeron_example.cpp  log_buffer_example.cpp  spmc_example.cpp  udp_transport_example.cpp
examples/disruptor_examples/: DynamicallyAddHandler.cpp  EarlyReleaseHandler.cpp  HandleExceptionOnTranslate.cpp  KeyedBatching.cpp  MultiProducerWithTranslator.cpp  Pipeliner.cpp  PullWithBatchedPoller.cpp  PullWithPoller.cpp  SequentialThreeConsumers.cpp  ShutdownOnError.cpp  ThreeToOneDisruptor.cpp  WaitForProcessing.cpp  WaitForShutdown.cpp
examples/disruptor_examples/longevent/: ByteBuffer.h  LongEvent.h  LongEventFactory.h  LongEventHandler.h  LongEventProducer.h  LongEventProducerWithTranslator.h
examples/disruptor_examples/longevent/lambdas/: LongEventMain.cpp
examples/disruptor_examples/longevent/legacy/: LongEventMain.cpp
examples/disruptor_examples/longevent/methodrefs/: LongEventMain.cpp
examples/disruptor_examples/objectevent/: Main.cpp
examples/disruptor_examples/support/: LongEvent.h  StubEvent.h
include/: aeron.h  disruptor.h  nano_stream.h  nano_stream_aeron.h
include/aeron/: aeron.h  client_conductor.h  context.h  log_buffers.h  publication.h  simple_aeron.h  subscription.h
include/aeron/client/: aeron.h  publication.h  subscription.h
include/disruptor/: AbstractSequencer.h  AggregateEventHandler.h  AlertException.h  BatchEventProcessor.h  BatchEventProcessorBuilder.h  BatchRewindStrategy.h  BlockingWaitStrategy.h  BusySpinWaitStrategy.h  Cursored.h  DataProvider.h  EventFactory.h  EventHandler.h  EventHandlerBase.h  EventHandlerIdentity.h  EventPoller.h  EventProcessor.h  EventSequencer.h  EventSink.h  EventTranslator.h  EventTranslatorOneArg.h  EventTranslatorThreeArg.h  EventTranslatorTwoArg.h  EventTranslatorVararg.h  EventuallyGiveUpBatchRewindStrategy.h  ExceptionHandler.h  ExceptionHandlers.h  FatalExceptionHandler.h  FixedSequenceGroup.h  IgnoreExceptionHandler.h  InsufficientCapacityException.h  LiteBlockingWaitStrategy.h  LiteTimeoutBlockingWaitStrategy.h  MultiProducerSequencer.h  NanosecondPauseBatchRewindStrategy.h  NoOpEventProcessor.h  PhasedBackoffWaitStrategy.h  ProcessingSequenceBarrier.h  RewindAction.h  RewindHandler.h  RewindableEventHandler.h  (+25 more)
include/nano_stream/: consumer.h  event_handler.h  event_translator.h  nano_stream.h  ring_buffer.h  sequence.h  wait_strategy.h
reference/tsf4g/tbus/: CMakeLists.txt  README.md
reference/tsf4g/tbus/include/: tbus.h  tlibc_error_code.h
reference/tsf4g/tbus/src/: tbus.c
reference/unity_interop/: RingBuffer.cpp  RingBuffer.h  UnityBattleContext.cpp  UnityBattleContext.h  UnityExport.cpp  UnityExport.h
scripts/: compare_benchmarks.sh  run_java_perftest.sh
src/: aeron_impl.cpp
tests/: CMakeLists.txt  test_ring_buffer.cpp  test_sequence.cpp
tests/disruptor/: AggregateEventHandlerTest.cpp  BatchEventProcessorTest.cpp  BatchingTest.cpp  BusySpinWaitStrategyTest.cpp  DisruptorStressTest.cpp  EventPollerTest.cpp  EventPublisherTest.cpp  EventTranslatorTest.cpp  FatalExceptionHandlerTest.cpp  FixedSequenceGroupTest.cpp  IgnoreExceptionHandlerTest.cpp  LifecycleAwareTest.cpp  LiteTimeoutBlockingWaitStrategyTest.cpp  MaxBatchSizeEventProcessorTest.cpp  MultiProducerSequencerTest.cpp  PhasedBackoffWaitStrategyTest.cpp  RewindBatchEventProcessorTest.cpp  RingBufferTest.cpp  RingBufferWithAssertingStubTest.cpp  SequenceBarrierTest.cpp  SequenceGroupTest.cpp  SequenceReportingCallbackTest.cpp  SequenceTest.cpp  SequencerTest.cpp  ShutdownOnFatalExceptionTest.cpp  SingleProducerSequencerTest.cpp  SleepingWaitStrategyTest.cpp  TimeoutBlockingWaitStrategyTest.cpp  YieldingWaitStrategyTest.cpp
tests/disruptor/dsl/: ConsumerRepositoryTest.cpp  DisruptorTest.cpp
tests/disruptor/dsl/stubs/: DelayedEventHandler.h  EventHandlerStub.h  EvilEqualsEventHandler.h  ExceptionThrowingEventHandler.h  SleepingEventHandler.h  StubExceptionHandler.h  StubPublisher.h
tests/disruptor/support/: DummyEventHandler.h  DummyEventProcessor.h  DummySequenceBarrier.h  DummyWaitStrategy.h  LongEvent.h  SequenceUpdater.h  StubEvent.h  TestEvent.h  WaitStrategyTestUtil.h
tests/disruptor/test_support/: CountDownLatch.h
tests/disruptor/util/: UtilTest.cpp
(+57 files in other folders)
